# mini_display

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN_display_fs_v1.md  README.md  TASKS_display_fs_v1.md  detect_display.py  display-fs  display.py  hello_world.py  justfile  requirements.txt
.agents/plans/: 001_rust_migration.md  002_fix_python_tests.md  002_rust_cleanup.md  003_configurable_font_size.md
.agents/plans/completed/: 002_add_dev_tooling.md  003-auto-fit-text.md  004_multi_page_text_display.md  004_multi_page_text_display.progress.md  004_spotify_command.md  004_spotify_command.progress.md  005_japanese_font_support.md
.agents/plans/in-progress/: 004_multi_page_text_display.md  004_multi_page_text_display.progress.md  004_spotify_command.md
.agents/plans/todo/: 002_add_dev_tooling.md  003-auto-fit-text.md  004_multi_page_text_display.md
.agents/research/: display_fs_v1_research.md  display_use_cases.md  japanese-character-support.md  python_implementation_completed.md  rust_dev_tooling_best_practices.md  rust_migration_requirements.md  rust_setup_guide.md  spotify-cover-art.md
.agents/skills/: AGENTS.md
.agents/skills/ralph/: SKILL.md
.agents/tmux/: SKILL.md
.github/workflows/: ci.yml
rust-src/: image.rs  port.rs  protocol.rs
src/: __init__.py  com_ports.py  image.py  image.rs  lib.rs  main.rs  port.rs  protocol.rs  serial_comm.py  spotify.rs  text.rs
tests/: __init__.py  test_com_ports.py  test_detect_display.py  test_error_handling.py  test_hello_world.py  test_image.py  test_serial_comm.py
(+1 files in other folders)
