[package]
name = "display-fs"
version = "0.1.0"
edition = "2021"
description = "CLI tool for WeAct Studio Display FS V1 (0.96 inch)"

[features]
default = []
japanese = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "display-fs"
path = "src/main.rs"

[dependencies]
serialport = "4.7"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
strip = true
lto = true
